base/apps/app-proxy/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  creationTimestamp: null
  name: csdp-cap-app-proxy
spec:
  ingressClassName: nginx
  rules:
  - host: daniel-runtime.csdp.codefresh.io
    http:
      paths:
      - backend:
          service:
            name: cap-app-proxy
            port:
              number: 3017
        path: /app-proxy
        pathType: Prefix
